--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,6 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 /** Ionic CSS Variables **/
 :root {
