--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -16,12 +16,47 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
+}
+
+.title{
+  color: #edf2f4;
+}
+
+swiper-container {
+  width: 100%;
+  height: 100%;
+}
+ 
+swiper-slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  
+}
+swiper-slide img{
+  display: block;
+  width: 45%;
+  height: 40%;
+  object-fit:contain;
+}
+
+.slide-1 {
+  color:#edf2f4;
+  font-style: italic;
+}
+.slide-2 {
+ color: #2b2d42;
+ font-style: italic;
+}
+.slide-3 {
+  color: #edf2f4;
+  font-style: italic;
 }
