--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,6 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+/*Mis imports*/
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
