--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -2,7 +2,7 @@
     <ion-menu contentId="main-content">
         <ion-header>
             <ion-toolbar color="tertiary">
-                <img class="logo-menu" src="./assets/images/imagen_2024-01-23_204621634-removebg-preview.png">
+                <img class="logo-menu ion-text-center" src="./assets/images/imagen_2024-01-23_204621634-removebg-preview.png">
             </ion-toolbar>
         </ion-header>
         <ion-content class="ion-padding">Se colocaran categorias</ion-content>
