--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,23 +1,18 @@
-
 <ion-content [fullscreen]="true">
-  <div class="contenido">
-  <figure class="ion-text-center">
-      <img src="../../assets/icon/descargar.png" alt="logo">
-  </figure>
-  </div>
-  <p class="text-new"><b>Log In</b></p>
-  <div>
-    <form class="form-new">
-        <ion-item>
-          <ion-input type="email" fill="solid" label="Email" labelPlacement="floating" helperText="Enter a valid email"
-          errorText="Invalid email"
-          ngModel email></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input type="password" fill="solid" label="Contraseña" 
-          labelPlacement="floating" errorText="Invalid email"
-          ngModel email></ion-input>
-        </ion-item>
+  
+    <div class="contenido">
+      <figure class="ion-text-center">
+        <img src="../../assets/icon/descargar.png" alt="logo">
+      </figure>
+      <p class="Login"><b>LOG IN</b></p>
+    <form class="form">
+      <ion-input type="email" label="Email" labelPlacement="floating" placeholder="email@domain.com" 
+       class="botones"></ion-input>
+      <ion-input type="password" label="Contraseña" labelPlacement="floating" class="botones"></ion-input>
+      <ion-button expand ="block" shape="round" class="boton-login"> Iniciar sesión</ion-button>
     </form>
-  </div>
+
+    <p>¿Aun no tienes cuenta?&nbsp;<a HREF="otra_pagina.html"> Create una cuenta aqui </a></p>
+    </div>
+
 </ion-content>
