--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,14 +1,56 @@
+ion-content{
+    --background: #23014e;
+    
+}
+figure{
+    padding-top: 55px;
+}
+p{
+    padding: 15px;
+    text-align: center;   
+    color: #a2b3d1;
+}
 .contenido img{
+    
     width: 50%;
     height: 50%;
 }
 
 .contenido{
     align-content:center;
-}
-.text-new{
-    font-family: system-ui;
-    font-size: xx-large;
-    text-align: center
     
+}
+
+.Login{
+    font-weight: 700;
+    font-size: 26px;
+    color: #fbae00;
+    margin: auto;
+    text-align: center;
+    
+}
+.form{
+    margin-top: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
+    
+}
+.botones{
+    margin-top: 35px;
+    height: 48px;
+    font-size: 15px;
+    text-transform: initial;
+    --border-radius: 10px;
+    box-shadow: 1px 8px 8px 0px rgba(0,0,0,0.5);
+    color:#a2b3d1;
+    --background:#3d0b60;
+    --highlight-color-focused:#a2b3d1;
+
+}
+.boton-login{
+    margin-top: 35px;
+    --background: #fbae00;
+    
+    font-size: bold;
+    box-shadow: 1px 8px 8px 0px rgba(0,0,0,0.5);
 }
