--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,18 +1,22 @@
 <ion-content [fullscreen]="true">
-  
-    <div class="contenido">
-      <figure class="ion-text-center">
-        <img src="../../assets/icon/descargar.png" alt="logo">
-      </figure>
-      <p class="Login"><b>LOG IN</b></p>
-    <form class="form">
-      <ion-input type="email" label="Email" labelPlacement="floating" placeholder="email@domain.com" 
-       class="botones"></ion-input>
-      <ion-input type="password" label="Contraseña" labelPlacement="floating" class="botones"></ion-input>
-      <ion-button expand ="block" shape="round" class="boton-login"> Iniciar sesión</ion-button>
+  <div class="contenido">
+    <figure class="ion-text-center">
+      <img src="../../assets/icon/descargar.png" alt="logo">
+    </figure>
+    <p class="Login"><b>LOG IN</b></p>
+
+    <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
+      <!--Esto es el item del correo. Donde colocamos la validacion creada llamando el motodo con formControlName-->
+      <ion-input labelPlacement="stacked" label="Email" placeholder="email@domain.com"
+        formControlName="email"></ion-input>
+      <ion-input type="password" label="Password" placeholder="Password" labelPlacement="stacked"
+        formControlName="password"></ion-input>
+      <ion-button type="submit" [disabled]="!loginForm.valid" shape="round"
+        expand="full">login</ion-button>
     </form>
 
-    <p>¿Aun no tienes cuenta?&nbsp;<a HREF="otra_pagina.html"> Create una cuenta aqui </a></p>
-    </div>
+    <p>¿Aun no tienes cuenta?&nbsp;<a HREF="otra_pagina.html"> Crear una cuenta</a></p>
+  </div>
+
 
 </ion-content>
