--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -1,3 +1,7 @@
+.inicio-app{
+  background-color: #572975;
+}
+
 ion-menu::part(backdrop) {
     background-color: rgba(255, 0, 255, 0.5);
   }
@@ -8,6 +12,11 @@ ion-menu::part(backdrop) {
     box-shadow: 4px 0px 16px rgba(255, 0, 255, 0.18);
   }
 
+  h2{
+    font-size: 1.75em;
+    background-color: #572975;
+  }
+  
 .logo{
     width: 50%;
     height: 50%;
@@ -30,4 +39,26 @@ swiper-slide {
     align-items:start;
     justify-content: center;
     text-align: center;
+    
+}
+ion-card img{
+  width: 100%;
+  height: 60%;
+  
+}
+.container {
+  white-space: nowrap; /* Evita el espacio entre elementos */
+}
+
+.box1, .box2 {
+  display: inline-block;
+  width: 30%; /* O ajusta el ancho según tus necesidades */
+  box-sizing: border-box; /* Incluye padding y borde en el ancho */
+  vertical-align: top;
+  text-align: center; /* Alinea los elementos en la parte superior */
+}
+
+.cards{
+  margin-top: 15px;
+  padding: 20px;
 }
