--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -2,7 +2,9 @@
   <ion-menu contentId="content" side="start">
     <ion-header>
       <ion-toolbar>
-        <ion-title>Menu</ion-title>
+        <ion-title>
+          <img class="logo-menu" src="../../assets/images/menu si.png">
+        </ion-title>
         <ion-buttons slot="start">
           <ion-button (click)="closeMenu()">
             <ion-icon name="close-outline"></ion-icon>
@@ -11,20 +13,26 @@
       </ion-toolbar>
     </ion-header>
     <ion-content>
-      <ion-list>
-        <ion-item>
-          Home
-        </ion-item>
-        
+      <ion-list class="list">
+        <ion-nav-link routerLink="/menu/inicio">
+          <ion-item><strong>Home</strong></ion-item>
+        </ion-nav-link>
+        <ion-nav-link routerLink="/menu/deportes">
+          <ion-item><strong>Deportes</strong></ion-item>
+        </ion-nav-link>
+        <ion-item><strong>Conciertos</strong></ion-item>
+        <ion-item><strong>Teatro</strong></ion-item>
+        <ion-item><strong>Comedia</strong></ion-item>
       </ion-list>
       
-      <ion-footer>
+      
+    </ion-content>
+    <ion-footer>
       <ion-item (click)="logout()">
         <ion-icon name="log-out"></ion-icon>
         Cerrar Session
       </ion-item>
     </ion-footer>
-    </ion-content>
   </ion-menu>
   <ion-router-outlet id="content" main></ion-router-outlet>
 </ion-split-pane>
