--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -37,7 +37,9 @@
     <div class="validation_mes">
       <b>{{loginMessage}}</b>
     </div>
-    <p>¿Aun no tienes cuenta?<a HREF="./register"> Crear una cuenta</a></p>
+    <p>¿Aun no tienes cuenta?<ion-nav-link routerLink="/register">
+      <strong> Crea una cuenta</strong>
+    </ion-nav-link></p>
   </div>
 
 
