--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -20,9 +20,10 @@
         <ion-nav-link routerLink="/menu/deportes">
           <ion-item><strong>Deportes</strong></ion-item>
         </ion-nav-link>
-        <ion-item><strong>Conciertos</strong></ion-item>
+        <ion-nav-link routerLink="/menu/conciertos">
+          <ion-item><strong>Conciertos</strong></ion-item>
+        </ion-nav-link>
         <ion-item><strong>Teatro</strong></ion-item>
-        <ion-item><strong>Comedia</strong></ion-item>
       </ion-list>
       
       
