--- a/src/app/conciertos/conciertos.page.html
+++ b/src/app/conciertos/conciertos.page.html
@@ -11,6 +11,7 @@
           </ion-toolbar>
       </ion-header>
       <ion-content>
+
           <div class="inicio-app">
               <swiper-container [loop]="true" pagination="true" pagination-clickable="true" space-between="30"
                   autoplay-delay="2500" autoplay-disable-on-interaction="false" pagination-dynamic-bullets="true">
@@ -27,51 +28,20 @@
               </swiper-container>-->
 
 
-              <h2><strong>DESTACADOS</strong></h2>
+              <h2><strong>CONCIERTOS</strong></h2>
               <hr />
               <div class="cards">
+
                   <ion-card>
-                      <img src="https://tuboleta.com/imagenes/659eaf6ce18da.webp" />
+                      <img src="https://tuboleta.com/imagenes/65babaca5a149.webp" />
                       <ion-card-header>
-                          <ion-card-title><strong> DAVIS GRUPO MUNDIAL I : COLOMBIA VS
-                                  LUXEMBURGO</strong></ion-card-title>
-                          <ion-card-subtitle>Club Bellavista Colsubsidio</ion-card-subtitle>
+                          <ion-card-title><b>LA DERECHA - 30 ANIVERSARIO</b></ion-card-title>
+                          <ion-card-subtitle>Astor Plaza</ion-card-subtitle>
                       </ion-card-header>
 
                       <ion-card-content>
                           <div class="container">
-                              <div class="box1">Martes <br><b>30</b><br>Ene 2024</div>
-                              <div class="box2"><ion-button shape="round">Comprar entrada.</ion-button></div>
-                          </div>
-                      </ion-card-content>
-                  </ion-card>
-
-                  <ion-card>
-                      <img src="https://tuboleta.com/imagenes/65981dad167a7.webp" />
-                      <ion-card-header>
-                          <ion-card-title><b>WENSES Y LALA</b></ion-card-title>
-                          <ion-card-subtitle>Teatro Cafam</ion-card-subtitle>
-                      </ion-card-header>
-
-                      <ion-card-content>
-                          <div class="container">
-                              <div class="box1">Viernes<br><strong>09</strong><br>Feb 2024</div>
-                              <div class="box2"><ion-button class="boton-card" shape="round">Comprar
-                                      entrada.</ion-button></div>
-                          </div>
-                      </ion-card-content>
-                  </ion-card>
-
-                  <ion-card>
-                      <img src="https://tuboleta.com/imagenes/65a5a79bbe918.webp" />
-                      <ion-card-header>
-                          <ion-card-title><b>LOS AMIGOS INVISIBLES</b></ion-card-title>
-                          <ion-card-subtitle>Teatro Pablo Tobón Uribe</ion-card-subtitle>
-                      </ion-card-header>
-
-                      <ion-card-content>
-                          <div class="container">
-                              <div class="box1">Jueves<br><strong>22</strong><br>Feb 2024</div>
+                              <div class="box1">Viernes<br><strong>26</strong><br>Abr 2024</div>
                               <div class="box2"><ion-button class="boton-card" shape="round">Comprar
                                       entrada.</ion-button></div>
                           </div>
