--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -34,6 +34,10 @@ form{
     padding-right: 30px;
     
 }
+.ojos{
+    --color: #fbae00;
+    font-size: bold;
+}
 ion-input{
     margin-top: 35px;
     height: 48px;
